@@ -1,23 +1,21 @@
 .filterable {
   display: grid;
-  grid-template-columns: auto 300px;
-  grid-column-gap: 50px;
+  grid-template-columns: 1fr minmax(theme('spacing.48'), theme('spacing.64'));
+  grid-column-gap: theme('spacing.12');
 
   &__filters {
-    grid-column-start: col-start -2 col-end -1;
-
     button[type='submit'] {
       display: block;
-      margin-bottom: 20px;
+      margin-bottom: theme('spacing.6');
     }
 
     input[type='checkbox'] {
       display: block;
-      margin-bottom: 10px;
+      margin-bottom: theme('spacing.3');
     }
   }
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(md) {
     grid-template-columns: auto;
 
     &__filters {
