@@ -209,6 +209,7 @@ The bulk of these enhancements have been from Paarth Agarwal, who has been doing
  * Stop rich text fields from overlapping with sidebar (Thibaud Colas)
  * Prevent comment buttons from overlapping with fields (Thibaud Colas)
  * Resolve MySQL search compatibility issue with Django 4.1 (Andy Chosak)
+ * Resolve layout issues with reports (including form submissions listings) on md device widths (Akash Kumar Sen, LB (Ben) Johnston)
 
 
 ## Upgrade considerations
